<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fillViewport="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewIcon"
            style="@android:style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_general"
            android:background="@drawable/bg_round"
            android:gravity="center"
            android:padding="@dimen/padding_general"
            android:text="@string/app_logo"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView1"
            style="@android:style/TextAppearance.Large"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listViewNotification"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:divider="@color/colorPrimary"
        android:dividerHeight="1dp"
        android:elevation="3dp"
        android:layoutAnimation="@anim/listviewanim"
        android:scrollbars="vertical"
        card_view:cardCornerRadius="0dp" />

    <TextView
        android:id="@android:id/empty"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_notifications"
        android:visibility="gone" />

</LinearLayout>